tests/NormalTests/paczka1/small_fuzzy/18393008.err
Error in line 1: Kj97Tgg5 S137 93,4
Error in line 3: Kj97Tgg5 A205 98,3
Error in line 4: Kj97Tgg5 S514 38,1
